cabal-version: 2.4

name: gravwell
version: 0

executable gravwell
  build-depends:
    ansi-terminal,
    base,
    containers,
    random,
    random-shuffle,
    pretty-simple,
    lens,
    generic-lens,
  default-extensions:
    BlockArguments
    DerivingStrategies
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    OverloadedLabels
    DeriveGeneric
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: Main.hs
  other-modules:
    Game
    Card
    Player
