cabal-version: 2.4

name: gravwell
version: 0

executable gravwell
  build-depends:
    ansi-terminal,
    base,
    containers,
    random,
    random-shuffle,
    lens,
    generic-lens,
    MonadRandom,
    mtl,
  default-extensions:
    BlockArguments
    DerivingStrategies
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    OverloadedLabels
    DeriveGeneric
    RankNTypes
    ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: Main.hs
  other-modules:
    Game
    Card
    Player
